# openar-it2901-ntnu

./: .env.docker.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
backend/: .env.example  .gitignore  Dockerfile  HELP.md  README.md  START_SERVER.md  ais_api_key_creation.md  api.py  architecture.md  detect_boats.py  detect_boats_yolo.py  generate_upload_url.py  main.py  nixpacks.toml  pyproject.toml  run_migrations.py  setup.sh
backend/ais/: __init__.py  aisClient.ts  env.ts  fetch_ais.py  logger.py  service.py
backend/ais_mapping_service/: __init__.py  camera_config.py  projection.py
backend/auth/: __init__.py  config.py  deps.py  routes.py  security.py
backend/common/: __init__.py  settings.py  types.py
backend/cv/: README.md  __init__.py  adaptive_rate.py  ais_matcher.py  boat_detection_streamer.py  bytetrack.yaml  config.py  correction_pipeline.py  decode_thread.py  detect_boats.py  detect_boats_yolo.py  detectors.py  eval.py  ffmpeg.py  inference_thread.py  long_persistence.py  performance.py  persistence.py  pipeline.py  prediction.py  publisher.py  runtime.py  smoothing.py  track_boats.py  tracker_registry.py  trackers.py  types.py  utils.py  worker.py  yolo_stream.py
backend/db/: __init__.py  database.py  init_db.py  models.py
backend/docs/: PRODUCTION_IDUN.md
backend/fusion/: fusion.py  samples.json
backend/migrations/: 001_create_app_users.sql  002_username_only_app_users.sql  003_create_media_assets.sql  004_seed_media_assets.sql  005_seed_fusion_pirbadet_assets.sql  006_ensure_fusion_pirbadet_asset_mappings.sql  007_enforce_fusion_pirbadet_ais_asset.sql  008_rename_fvessel_video.sql  009_update_default_video.sql  010_fix_fusion_video_s3_keys.sql  010_update_fusion_video_to_user_upload.sql  011_add_fusion_fields_to_media_assets.sql  011_update_fusion_video_to_demovideomock.sql
backend/mock_stream/: mock_stream.py
backend/orchestrator/: __init__.py  exceptions.py  orchestrator.py  types.py
backend/scripts/: backfill_hls.py  check_hls_status.py  debug_db.py  reset_stuck.py
backend/sensor_fusion/: __init__.py  ais_store.py  fusion_config.py  matcher.py  service.py
backend/services/: detection_service.py  hls_service.py  stream_service.py  transcode_service.py  uploaded_video_analysis_service.py
backend/settings/: __init__.py  _env.py  app.py  cv.py
backend/storage/: s3.py
backend/streaming/: __init__.py  frame_source.py
backend/tests/: __init__.py  conftest.py  fakes.py  test_adaptive_rate.py  test_api_stream_endpoints.py  test_api_websocket.py  test_auth_routes.py  test_auth_security.py  test_concurrent_streams_e2e.py  test_detection_payload.py  test_detection_publisher.py  test_ffmpeg_publisher.py  test_hls_segmentation.py  test_idun_bridge_multistream.py  test_s3_coerce.py  (+18 more)
(+310 files in other folders)
