[project]
name = "openar-backend"
version = "0.1.0"
description = "Backend for boat detection using Roboflow Inference"
requires-python = ">=3.9"
dependencies = [
    "inference-cli",
    "inference",
    "inference-sdk",
    "roboflow",
    "supervision",
    "opencv-python",
    "pillow",
    "numpy",
    "scipy",
    "ultralytics",
    "lap>=0.5.12",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv",
    "websockets>=12.0",
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform != 'darwin'" }]
torchvision = [{ index = "pytorch-cu121", marker = "sys_platform != 'darwin'" }]
